--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -20,6 +20,10 @@
     <%= stylesheet_link_tag 'embed' %>
     <!-- Javascript -->
     <%= javascript_include_tag 'embed' %>
+
+    <% if content_for?(:head) %>
+      <%= yield(:head) %>
+    <% end %>
   </head>
   <body <%= "style=\"#{style}\"".html_safe if style.length.positive? %>>
     <% if Settings.host == "heliotrope-preview.hydra.lib.umich.edu" %>
