HELIO-4092 - add metadata to pass to CSB

--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -133,10 +133,12 @@
           skipLink: '.skip',
           download_links: <%= @ebook_download_presenter.csb_download_links.to_json.html_safe %>,
           loader_template: '<div class="fulcrum-loading"><div class="rect rect1"></div><div class="circle circ1"></div><div class="rect rect2"></div><div class="circle circ2"></div></div>',
-          injectStylesheet: '/assets/css/fulcrum_enhanced_display.css',
+          injectStylesheet: '/assets/css/fulcrum_enhanced_display.css',          
           metadata: {
             doi: '<%= @citable_link %>',
-            location: 'Ann Arbor, MI'
+            location: 'Ann Arbor, MI',
+            press_subdomain: '<%= @subdomain %>',
+            noid: '<%= @noid %>',
           }
         });
 
