fix copy-pasta or merge error

--- a/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_audio.html.erb
@@ -28,7 +28,7 @@
     if(window.frameElement != null) {
       body = document.querySelector('body');
       console.log("AHOY RESIZED AUDIO IFRAME", body.offsetHeight, body.scrollHeight, window.frameElement);
-      window.frameElement.style.height = (body.scrollHeight + <%= file_set.audio_without_closed_captions?? ? '45' : '0' %>) + 'px'; // 45px for vertical volume bar
+      window.frameElement.style.height = (body.scrollHeight + <%= file_set.audio_without_closed_captions? ? '45' : '0' %>) + 'px'; // 45px for vertical volume bar
     }
   }
 
