horizontal and vertical logos for institutions

--- a/app/views/greensub/institutions/_form.html.erb
+++ b/app/views/greensub/institutions/_form.html.erb
@@ -10,7 +10,8 @@
     <%= f.input :link_resolver_url %>
     <%= f.input :location %>
     <%= f.input :login %>
-    <%= f.input :logo_path %>
+    <%= f.input :horizontal_logo %>
+    <%= f.input :vertical_logo %>
     <%= f.input :ror_id %>
     <%= f.input :site %>
   </div>
