--- a/app/views/greensub/institutions/show.html.erb
+++ b/app/views/greensub/institutions/show.html.erb
@@ -22,8 +22,10 @@
   <div class="col-md-10">&nbsp;<%= @institution.location %></div>
   <div class="col-md-2"><em>Login</em></div>
   <div class="col-md-10">&nbsp;<%= @institution.login %></div>
-  <div class="col-md-2"><em>Logo Path</em></div>
-  <div class="col-md-10">&nbsp;<%= @institution.logo_path %></div>
+  <div class="col-md-2"><em>Horizontal Logo</em></div>
+  <div class="col-md-10">&nbsp;<%= @institution.horizontal_logo %></div>
+  <div class="col-md-2"><em>Vertical Logo</em></div>
+  <div class="col-md-10">&nbsp;<%= @institution.vertical_logo %></div>
   <div class="col-md-2"><em>ROR ID</em></div>
   <div class="col-md-10">&nbsp;<%= @institution.ror_id %></div>
   <div class="col-md-2"><em>Site</em></div>
